# aria-runtime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
aria/: logging_setup.py
aria/cli/: audit_cmd.py  bootstrap.py  main.py  run_cmd.py  tools_cmd.py
aria/kernel/: context.py  fsm.py  kernel.py
aria/memory/: sqlite.py
aria/models/: errors.py  router.py  types.py
aria/models/providers/: anthropic_provider.py  base.py  circuit_breaker.py  ollama_provider.py
aria/security/: scrubber.py  secrets.py
aria/tools/: registry.py  sandbox.py
aria/tools/builtin/: __init__.py  read_file.py  write_file.py
tests/: conftest.py  test_aria.py  test_builtin_tools.py  test_circuit_breaker.py  test_core.py  test_fsm.py  test_kernel.py  test_memory.py  test_router.py  test_sandbox.py  test_sandbox_validation.py  test_scrubber.py  test_security.py  test_types.py
