[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aria-runtime"
version = "0.1.0"
description = "Agent Runtime for Intelligent Automation — local-first, secure by default"
authors = [
    { name = "Shivay Singh", email = "shivcomjputofficial@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.25.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
aria = "aria.cli.main:cli"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests requiring subprocess",
    "security: security-focused tests",
]
addopts = "--cov=aria --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria*"]
